# fa-local-operator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ci_gate.sh
doc/: FLOSYSTEM.md  faSYSTEM.md
doc/system/: 03-contract-surface.md  04-validation-and-delivery.md  05-execution-bridge-writeback.md  90-appendices.md  BUILD.sh  _index.md  validate_snapshots.sh
doc/system/00_overview/: 01-overview-charter.md
doc/system/10_service-contract/: 02-contract-surface.md
doc/system/20_runtime/: 03-execution-bridge-writeback.md
doc/system/30_dependencies/: 04-dependencies.md
doc/system/40_governance/: 05-scope.md  06-governance.md  07-change-control.md  08-boundaries-and-doctrine.md
doc/system/50_operations/: 09-validation-and-delivery.md
doc/system/99_appendices/: 10-appendices.md
schemas/: gnat-dispatch-envelope.schema.json
src/adapters/execution_delivery/: mod.rs  nmap_preflight.rs
src/app/: intake_service.rs
src/domain/shared/: schema.rs
src/errors/: mod.rs
src/integrations/cortex/: mod.rs
src/integrations/df_local/: mod.rs
src/integrations/neuronforge_local/: mod.rs
tests/: contracts_loading.rs  gnat_dispatch.rs  neuronforge_local_inference.rs  nmap_preflight_adapter.rs
tests/contracts/fixtures/invalid/: gnat-dispatch-envelope-cortex-routes.json  gnat-dispatch-envelope-raw-content.json  gnat-dispatch-envelope-unsupported-worker.json
tests/contracts/fixtures/valid/: capability-registry-nmap-preflight.json  execution-plan-nmap-preflight.json  gnat-dispatch-envelope-basic.json  route-decision-nmap-preflight-policy-preapproved.json
