[package]
name = "fa-local"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "fa_local"
path = "src/lib.rs"

[[bin]]
name = "fa-local-run"
path = "src/bin/fa_local_run.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
jsonschema = { version = "0.45", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1"
